<resources>
    <string name="app_name">RussianHistory</string>
    <string name="action_clear">Clear</string>
    <string name="add">add</string>
    <string name="realmAuthor">Author</string>
    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="desc">Описание</string>
    <string name="add_book">Add roomBook to db</string>
    <string name="pick_release_date">Pick Release Date</string>
    <string name="registration">Регистрация</string>
    <string name="sing_in">Войти</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="birthday">Дата рождения : </string>
    <string name="city">Город</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="select_date">Выбрать дату</string>
    <string name="have_this_book">Есть эта книга</string>
    <string name="get_this_book">Одолжить книгу</string>
    <string name="book_name">Название книги</string>
    <string name="start_vid_date">Дата взятия :</string>
    <string name="end_vid_date">Дата возврата :</string>
    <string name="return_book">Вернуть</string>
    <string name="main_book_list">Все книги</string>
    <string name="debtor_vid_list">Взятые книги</string>
    <string name="lender_vid_list">Отданные книги</string>
    <string name="my_book_list">Мои книги</string>
    <string name="filter_action">Filter action</string>
    <string name="lender_choice">Выберите того,у кого возьмете книгу</string>
    <string name="cancel">Cancel</string>
    <string name="name_already_exist">Данное имя уже занято</string>
    <string name="enter_correct_name">Введите правильный email</string>
    <string name="enter_correct_password">Введите правильный пароль</string>
    <string name="user_not_found">Пользователь с таким именем и паролем не найден.Введите корректные данные</string>
    <string name="bookId">bookId</string>
    <string name="isOwnBook">isOwnBook</string>
    <string name="vidId">vidId</string>
    <string name="readerRole">readerRole</string>
    <string name="debtor">debtor</string>
    <string name="lender">lender</string>
    <string name="lender_name">Lender name</string>
    <string name="debtor_name">Debtor name</string>
    <string name="loading">Loading…</string>
    <string name="change_data">Изменить данные</string>
    <string name="photo">Фото</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="text_empty_content">There are no any content yet</string>
    <string name="email">Email</string>
    <string name="gender">Выберите пол</string>
    <string name="google_maps_api_key">AIzaSyAeVAYYfCHq8XvVn9bSJOFBXx8Z4pYPNFQ</string>
    <string name="books">Книги</string>
    <string name="friends">Друзья</string>
    <string name="tests">Тесты</string>
    <string name="card">Карточки</string>
    <string name="game">Игра</string>
    <string name="book_crossing">BookCrossing</string>
    <string name="logout">Выйти</string>
    <string name="country">Страна</string>
    <string name="upload">Загрузить</string>
    <string name="sex">Пол</string>
    <string name="authors">Авторы</string>
    <string name="mark">Оценка</string>
    <string name="add_crossing">Добавить crossing</string>
    <string name="find_crossing">Найти crossing</string>
    <string name="description_default">Нет описания</string>
    <string name="photo_default">book_default.jpg</string>
    <string name="authors_default">Авторы не указан</string>
    <string name="search">Search</string>
    <string name="key_phrase">Key Phrase</string>
    <string name="title">Название</string>
    <string name="date">Дата :</string>
    <string name="place">Место</string>
    <string name="add_member">Участвовать</string>
    <string name="send_comment_button_label">Send</string>
    <string name="comment_text_hint">Комментарий…</string>
    <string name="button_post_comment">Post comment</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="posted_by_label">Posted by:</string>
    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>
    <string name="message_new_post_was_created">New post was created</string>
    <string name="collapse_text_label">show less</string>
    <string name="expand_text_label">show more</string>
    <string name="now_time_range">now</string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="comments">Comments</string>
    <string name="text_take_photo">Take photo</string>
    <string name="text_pick_photo">Pick from Gallery</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="edit_comment_menu_item">Edit</string>
    <string name="delete_comment_menu_item">Delete</string>
    <string name="message_comment_was_removed">Comment was removed</string>
    <string name="message_comment_was_edited">Comment was edited</string>
    <string name="title_edit_comment">Edit comment</string>
    <string name="button_title_save">Done</string>
    <string name="button_title_continue">Continue</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="action_create_profile">Continue</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 symbols</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_confirm_password">Wrong password confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_fail_create_profile">Fail to create profile</string>
    <string name="error_fail_update_profile">Fail to update profile</string>
    <string name="text_login">Thank you for using our application! Please, sign in for continue your action.</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="error_google_play_services">Google Play Services error.</string>
    <string name="button_login_with_facebook">Login with facebook</string>
    <string name="button_login_with_google">Login with google</string>
    <string name="message_post_was_created">Post was created</string>
    <string name="error_fail_create_post">Fail to create post</string>
    <string name="error_fail_load_image">Fail to load image</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="message_creating_post">Creating post ..</string>
    <string name="message_saving">Saving ..</string>
    <string name="warning_empty_image">Image is required</string>
    <string name="warning_empty_title">Title is required</string>
    <string name="warning_empty_description">Description is required</string>
    <string name="error_post_title_length">Max length of the title should be less than 255 symbols</string>
    <string name="error_fail_remove_post">Fail to remove post</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="error_fail_update_post">Fail to update post</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="confirm_deletion_post">Delete this post?</string>
    <string name="error_general">Somthing went wrong.</string>
    <string name="follow">Следить</string>
    <string name="followersId">Участники</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="subscribe">Подписаться</string>
    <string name="return_book_please">Перед отпиской передайте книгу кому-нибудь!</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="remove_friend">Удалить из друзей</string>
    <string name="remove_request">Удалить из подписок</string>
    <string name="crossings">Crossings</string>
    <string name="show_subscriptions">Отображать только подписки</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="login">Login</string>
    <string name="create_account">Нет аккаунта ? Зарегистрируйся</string>
    <string name="if_member_login">Уже зарегистрирован ? Войди</string>
    <string name="create_new_account">Create Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_photo">Add photo</string>
    <string name="photo_uploaded">Photo uploaded</string>
    <string name="select_place">Выберите ближайший город</string>
    <string name="select_marker_mode">Выберите режим для отметки</string>
    <string name="show_info">Показать информацию</string>
    <string name="show_photo">Отобразить фото</string>
    <string name="show_path">Показать путь до метки</string>
    <string name="person_place">Это ваше расположение</string>
    <string name="settings">Настройки</string>
    <string name="send_notif_setting">Оповещать об изменениях в crossings</string>
    <string name="general">Общее</string>
    <string name="map">Карта</string>
    <string name="test_name">Название теста</string>
    <string name="add_card">Добавить карточку</string>
    <string name="added_cards">Добавленная карта</string>
    <string name="create_questions">Создать вопросы</string>
    <string name="qustionId">Вопрос</string>
    <string name="add_answer">Добавить ответ</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="finish_questions">Завершить</string>
    <string name="test_desc">Описание</string>
    <string name="select_test_type">Выберите тип теста</string>
    <string name="test_type_one">Один ответ</string>
    <string name="test_type_many">Много ответов</string>
    <string name="intelligence">Интеллект</string>
    <string name="strength">Сила</string>
    <string name="hp">Здоровье</string>
    <string name="support">Поддержка</string>
    <string name="prestige">Влияние</string>
    <string name="find_game">Find Game</string>
    <string name="game_searching">Ищем игру</string>
    <string name="not_enough_cards">У вас недостаточно карт</string>
    <string name="enemy">enemy:</string>
    <string name="default_parametr_value">10</string>
    <string name="authorName">Автор теста</string>
    <string name="find_bot">Найти бота</string>
    <string name="game_name">Название игры</string>
    <string name="game_card_count">Кол-во возможных карт</string>
    <string name="add_another_photo">Выбрать другой аватар</string>
    <string name="create_game">Создать игру</string>
    <string name="select_game_type">Выберите тип игры</string>
    <string name="choose_card_mode">Какие карты можно использовать</string>
    <string name="default_card_number">3</string>
    <string name="epoch">Эпоха</string>
    <string name="choose_epoch">Выберите эпоху</string>
</resources>