<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:id="@+id/linlay_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_cover"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/knight"
                android:alpha="1"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_test_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/et_test_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/test_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_add_card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="12dp"
                    android:background="@color/primary"
                    android:textColor="@color/white"
                    android:text="@string/add_card"/>

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_test_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/et_test_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/test_desc"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/epoch"
                    android:textSize="@dimen/text.18"
                    android:textColor="@color/primary_text"
                    android:layout_marginBottom="8dp"
            />

            <LinearLayout
                    android:id="@+id/li_choose_epoch"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:elevation="1dp">

                <TextView
                        android:id="@+id/tv_epoch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:paddingStart="24dp"
                        android:paddingEnd="4dp"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:text="@string/choose_epoch"
                />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp"
                        android:layout_marginEnd="12dp"
                />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_test_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/added_cards"
            android:textColor="@color/primary_text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="@dimen/text.18" />

        <TextView
            android:id="@+id/tv_added_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text.16"
           />





        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_create_questions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:text="@string/create_questions"/>

    </LinearLayout>
</ScrollView>