<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ab_comics_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <LinearLayout
                android:id="@+id/linlay_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_cover"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/knight"
                    android:alpha="1"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ti_game_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">
                        <EditText
                            android:id="@+id/et_game_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/game_name"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_add_game_photo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="12dp"
                        android:background="@color/primary"
                        android:textColor="@color/white"
                        android:text="@string/add_another_photo"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/epoch"
                        android:textColor="@color/primary_text"
                        android:layout_marginBottom="8dp"
                />

                <LinearLayout
                        android:id="@+id/li_choose_epoch"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:background="@color/white"
                        android:elevation="1dp">

                    <TextView
                            android:id="@+id/tv_epoch"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:paddingStart="24dp"
                            android:paddingEnd="4dp"
                            android:layout_gravity="center"
                            android:gravity="center_vertical"
                            android:text="@string/choose_epoch"
                    />

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_arrow_drop_down_black_24dp"
                            android:layout_marginEnd="12dp"
                    />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_card_mode"/>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                ms_background_color="@color/primary"
                ms_text_color="@color/white"
                android:layout_marginTop="4dp"
                android:text="@string/select_game_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/game_card_count"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <SeekBar
                        android:id="@+id/seekBarCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progress="@string/default_card_number"
                        android:layout_weight="15"
                        android:max="15" />
                    <TextView
                        android:id="@+id/tvCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/default_card_number"/>

                </LinearLayout>

            </LinearLayout>





            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_create_game"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:text="@string/create_game"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

